8291600: [vectorapi] vector cast op check is not always needed for vector mask cast