src/hotspot/share/opto/vectorIntrinsics.cpp
@@ -142,6 +142,46 @@ bool LibraryCallKit::arch_supports_vector_rotate(int opc, int num_elem, BasicTyp
   return is_supported;
 }
 
+bool LibraryCallKit::arch_supports_vectormask_cast(const TypeVect* src_type, const TypeVect* dst_type, VectorMaskUseType mask_use_type) {
+  BasicType elem_bt_from = src_type->element_basic_type();
+  BasicType elem_bt_to = dst_type->element_basic_type();
+  int num_elem = dst_type->length();
+
+  // We need the VectorMaskCast op if:
+  // 1) the current platform supports predicated feature, or
+  // 2) the element size (in bytes) of the src and dst type is equal to each other
+  if ((src_type->isa_vectmask() && dst_type->isa_vectmask()) ||
+      type2aelembytes(elem_bt_from) == type2aelembytes(elem_bt_to)) {
+    return arch_supports_vector(Op_VectorMaskCast, num_elem, elem_bt_to, mask_use_type);
+  }
+
+  BasicType new_elem_bt_from = elem_bt_from;
+  BasicType new_elem_bt_to = elem_bt_to;
+  if (is_floating_point_type(elem_bt_from)) {
+    new_elem_bt_from = elem_bt_from == T_FLOAT ? T_INT : T_LONG;
+  }
+  if (is_floating_point_type(elem_bt_to)) {
+    new_elem_bt_to = elem_bt_to == T_FLOAT ? T_INT : T_LONG;
+  }
+
+  // For other cases, we need the VectorCast op instead. Besides, if the casting operation
+  // involves floating point types, we also need the VectorMaskCast op to do conversions
+  // between the floating point type and the integral type that has the same type size.
+  //
+  // The casting operation patterns involving floating point type F and integral type X are:
+  // Case A) F -> X :=  VectorMaskCast (F->I/L) + VectorCast[I/L]2X
+  // Case B) X -> F :=  VectorCastX2[I/L] + VectorMaskCast ([I/L]->F)
+  // Case C) F -> F :=  VectorMaskCast (F->I/L) + VectorCast[I/L]2[L/I] + VectorMaskCast (L/I->F)
+  if ((new_elem_bt_from != elem_bt_from &&
+       !arch_supports_vector(Op_VectorMaskCast, num_elem, new_elem_bt_from, mask_use_type)) ||
+      !arch_supports_vector(VectorCastNode::opcode(new_elem_bt_from), num_elem, new_elem_bt_to, mask_use_type) ||
+      (new_elem_bt_to != elem_bt_to &&
+       !arch_supports_vector(Op_VectorMaskCast, num_elem, elem_bt_to, mask_use_type))) {
+    return false;
+  }
+  return true;
+}
+
 Node* GraphKit::box_vector(Node* vector, const TypeInstPtr* vbox_type, BasicType elem_bt, int num_elem, bool deoptimize_on_exception) {
   assert(EnableVectorSupport, "");
 
@@ -2482,24 +2522,21 @@ bool LibraryCallKit::inline_vector_convert() {
   // through a vector or predicate register.
   if (is_mask &&
       ((src_type->isa_vectmask() == NULL && dst_type->isa_vectmask()) ||
-       (dst_type->isa_vectmask() == NULL && src_type->isa_vectmask()))) {
+       (dst_type->isa_vectmask() == NULL && src_type->isa_vectmask()) ||
+       num_elem_from != num_elem_to)) {
     return false;
   }
 
   Node* op = opd1;
   if (is_cast) {
-    BasicType new_elem_bt_to = elem_bt_to;
-    BasicType new_elem_bt_from = elem_bt_from;
-    if (is_mask && is_floating_point_type(elem_bt_from)) {
-      new_elem_bt_from = elem_bt_from == T_FLOAT ? T_INT : T_LONG;
-    }
-    int cast_vopc = VectorCastNode::opcode(new_elem_bt_from, !is_ucast);
-    // Make sure that cast is implemented to particular type/size combination.
-    if (!arch_supports_vector(cast_vopc, num_elem_to, elem_bt_to, VecMaskNotUsed)) {
+    int cast_vopc = VectorCastNode::opcode(elem_bt_from, !is_ucast);
+
+    // Make sure that vector cast is implemented to particular type/size combination if it is not
+    // a mask casting.
+    if (!is_mask && !arch_supports_vector(cast_vopc, num_elem_to, elem_bt_to, VecMaskNotUsed)) {
       if (C->print_intrinsics()) {
         tty->print_cr("  ** not supported: arity=1 op=cast#%d/3 vlen2=%d etype2=%s ismask=%d",
-                      cast_vopc,
-                      num_elem_to, type2name(elem_bt_to), is_mask);
+                      cast_vopc, num_elem_to, type2name(elem_bt_to), is_mask);
       }
       return false;
     }
@@ -2524,8 +2561,8 @@ bool LibraryCallKit::inline_vector_convert() {
       // Now ensure that the destination gets properly resized to needed size.
       op = gvn().transform(new VectorReinterpretNode(op, op->bottom_type()->is_vect(), dst_type));
     } else if (num_elem_from > num_elem_to) {
-      // Since number elements from input is larger than output, simply reduce size of input (we are supposed to
-      // drop top elements anyway).
+      // Since number of elements from input is larger than output, simply reduce size of input
+      // (we are supposed to drop top elements anyway).
       int num_elem_for_resize = num_elem_to;
 
       // It is possible that arch does not support this intermediate vector size
@@ -2541,19 +2578,20 @@ bool LibraryCallKit::inline_vector_convert() {
         return false;
       }
 
-      op = gvn().transform(new VectorReinterpretNode(op,
-                                                     src_type,
-                                                     TypeVect::make(elem_bt_from,
-                                                                    num_elem_for_resize)));
+      const TypeVect* resize_type = TypeVect::make(elem_bt_from, num_elem_for_resize);
+      op = gvn().transform(new VectorReinterpretNode(op, src_type, resize_type));
       op = gvn().transform(VectorCastNode::make(cast_vopc, op, elem_bt_to, num_elem_to));
-    } else {
+    } else { // num_elem_from == num_elem_to
       if (is_mask) {
-        if ((dst_type->isa_vectmask() && src_type->isa_vectmask()) ||
-            (type2aelembytes(elem_bt_from) == type2aelembytes(elem_bt_to))) {
-          op = gvn().transform(new VectorMaskCastNode(op, dst_type));
-        } else {
-          op = VectorMaskCastNode::makeCastNode(&gvn(), op, dst_type);
+        // Make sure that cast for vector mask is implemented to particular type/size combination.
+        if (!arch_supports_vectormask_cast(src_type, dst_type, VecMaskNotUsed)) {
+          if (C->print_intrinsics()) {
+            tty->print_cr("  ** not supported: arity=1 op=maskcast vlen2=%d etype2=%s ismask=%d",
+                          num_elem_to, type2name(elem_bt_to), is_mask);
+          }
+          return false;
         }
+        op = gvn().transform(VectorMaskCastNode::make(&gvn(), op, dst_type));
       } else {
         // Since input and output number of elements match, and since we know this vector size is
         // supported, simply do a cast with no resize needed.
